--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Messenger"
         tools:targetApi="31">
         <activity
+            android:name=".forgotPassword.ForgotPasswordActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".login.LoginActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
