--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Messenger"
         tools:targetApi="31">
         <activity
+            android:name=".users.UsersActivity"
+            android:exported="false" />
+        <activity
             android:name=".signUp.SignUpActivity"
             android:exported="false" />
         <activity
